Marshaller API refactoring. Add missed types in tests.